@@ -173,11 +173,6 @@ Unless \-\-resolve has been made the default by setting the
 autoResolve flag in conaryrc, \-\-no-resolve
 is the default behavior.
 .TP
-.B \-\-no-deps-recurse
-Do not search dependencies recursively, print out only direct dependencies
-of the trove.  Meaningless with \-\-resolve because dependency resolution
-implies recursion.
-.TP
 .B \-\-replace-files
 When a normal file (not a configuration file or a transient file) has
 changed on the system between updates to that file, or if a file
